--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="about-me__info--cointainer">
             <figure class="about-me__picture--mask">
               <img
-                src="assets/pozacumine.jpeg"
+                src="./assets/pozacumine.jpeg"
                 class="about-me__picture"
                 alt="Picture of me!"
               />
@@ -68,14 +68,14 @@
               <a href="https://github.com/suleaserban" target="_blank" class="about-me__link">
                 <i class="uil uil-github"></i>
               </a>
-              <a href="assets/CV Serban Sulea.pdf" target="_blank"  class="about-me__link">
+              <a href="./assets/CV Serban Sulea.pdf" target="_blank"  class="about-me__link">
                 <i class="uil uil-file-download-alt"></i>
               </a>
             </div>
           </div>
           <figure class="about-me__img--container">
             <img
-              src="assets/undraw_programming_re_kg9v.svg"
+              src="./assets/undraw_programming_re_kg9v.svg"
               class="about-me__img"
               alt=""
             />
@@ -128,14 +128,14 @@
             </div>
             <div class="language">
               <figure class="language__img--wrapper">
-                <img src="assets/c (1).svg" alt="c++" class="language__img" />
+                <img src="./assets/c (1).svg" alt="c++" class="language__img" />
               </figure>
               <span class="language__name">C++</span>
             </div>
             <div class="language">
               <figure class="language__img--wrapper">
                 <img
-                  src="assets/express.svg"
+                  src="./assets/express.svg"
                   alt="react"
                   class="language__img"
                 />
@@ -145,7 +145,7 @@
             <div class="language">
               <figure class="language__img--wrapper">
                 <img
-                  src="assets/angular.svg"
+                  src="./assets/angular.svg"
                   alt="angular"
                   class="language__img"
                 />
@@ -155,7 +155,7 @@
             <div class="language">
               <figure class="language__img--wrapper">
                 <img
-                  src="assets/nodejs.svg"
+                  src="./assets/nodejs.svg"
                   alt="node"
                   class="language__img"
                 />
@@ -177,7 +177,7 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="assets/undraw_destination_re_sr74.svg"
+                  src="./assets/undraw_destination_re_sr74.svg"
                   class="project__img"
                   alt="primul proiect"
                 />
@@ -211,7 +211,7 @@
              <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="assets/undraw_progressive_app_m-9-ms.svg"
+                  src="./assets/undraw_progressive_app_m-9-ms.svg"
                   class="project__img"
                   alt="primul proiect"
                 />
@@ -249,7 +249,7 @@
       <div class="row footer__row">
         <a href="#" class="footer__anchor">
           <figure class="footer__logo">
-         <img src="assets/logomeu.png" class="footer__logo--img" alt="">
+         <img src="./assets/logomeu.png" class="footer__logo--img" alt="">
           </figure>
           <span class="footer__logo--popper">
             Top
@@ -272,7 +272,7 @@
           link__hover-effect
           link__lover-effect--white
           " target="_blank">LinkedIn</a>
-          <a href="assets/CV Serban Sulea.pdf" class="
+          <a href="./assets/CV Serban Sulea.pdf" class="
           footer__social--link
           link__hover-effect
           link__lover-effect--white
