--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <div class="row footer__row">
         <a href="#" class="footer__anchor">
           <figure class="footer__logo">
-         <img src="./assets/logomeu.png" class="footer__logo--img" alt="">
+         <img src="https://suleaserban.github.io/Personal-Website/assets/logomeu.png" class="footer__logo--img" alt="">
           </figure>
           <span class="footer__logo--popper">
             Top
