--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </figure>
             <h1 class="about-me__info--title">
               Hi there!Welcome to
-              <span class="text-purple">Serbi's website</span>
+              <span class="text-purple">Serban's website</span>
             </h1>
             <p class="about-me__info-para">
               A future
