--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           link__hover-effect
           link__lover-effect--white
           " target="_blank">LinkedIn</a>
-          <a href="./assets/CV Serban Sulea.pdf" class="
+          <a href="./assets/SerbanSuleaResume.pdf" class="
           footer__social--link
           link__hover-effect
           link__lover-effect--white
