inlocuire CV vechi

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <a href="https://github.com/suleaserban" target="_blank" class="about-me__link">
                 <i class="uil uil-github"></i>
               </a>
-              <a href="./assets/CV Serban Sulea.pdf" target="_blank"  class="about-me__link">
+              <a href="./assets/SerbanSuleaResume.pdf" target="_blank"  class="about-me__link">
                 <i class="uil uil-file-download-alt"></i>
               </a>
             </div>
